--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
         <div class="pics">
             <div class="one">
                 <p>Jbl Endurance Run sports</p><br>
-                <img src="/images/products/jbl-endu-1.png"><br>
+                <img src="./images/products/jbl-endu-1.png"><br>
                 <p><span>₹999</span> <span style="text-decoration: line-through ;padding-left: 10px;">₹1,599</span></p>
             </div>
             <div class="one">
                 <p>BoAt Airdopes 203</p><br>
-                <img src="/images/products/boat203-1.png"><br>
+                <img src="./images/products/boat203-1.png"><br>
                 <p><span>₹1,074</span><span style="text-decoration: line-through; padding-left: 10px;">₹3,999</span></p>
             </div>
             <div class="one">
                 <p>BoAt Rockerz 518</p><br>
-                <img src="/images/products/boat518-1.png"><br>
+                <img src="./images/products/boat518-1.png"><br>
                 <p><span>₹1,299</span><span style="text-decoration: line-through; padding-left: 10px;">₹3,990</span></p>
             </div>
             <div class="one">
                 <p>Jbl Tune 760NC</p><br>
-                <img src="/images/products/jbl760nc-1.png"><br>
+                <img src="./images/products/jbl760nc-1.png"><br>
                 <p><span>₹5,999</span><span style="text-decoration: line-through; padding-left: 10px;">₹7,990</span></p>
             </div>
             <div class="one">
                 <p>BoAt Rockerz 255</p><br>
-                <img src="/images/products/boat255r-1.png"><br>
+                <img src="./images/products/boat255r-1.png"><br>
                 <p><span>₹899</span><span style="text-decoration: line-through;padding-left: 10px;">₹2,990</span></p>
             </div>
         </div>
